--- a/3-Статистика в Python/5-Доверительные интервалы. Статистическая проверка гипотез/Confidential_intervals_hw.ipynb
+++ b/3-Статистика в Python/5-Доверительные интервалы. Статистическая проверка гипотез/Confidential_intervals_hw.ipynb
@@ -20,7 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Ваш код..."
+    "sigma = 15\n",
+    "Z = 1.96  # 95%\n",
+    "e = 5 #%\n",
+    "\n",
+    "N = ((sigma*Z)/e)**2\n",
+    "N\n"
    ]
   },
   {
